# oto_modkit

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: config.py  main.py  mylog.py
src/db/: connection.py
src/pages/ocr/: area_interest.py  sidebar.py  ui_live_ocr.py
